# flask_rest_api

./: .pre-commit-config.yaml  LICENSE  README.md  config.py  pyproject.toml  wsgi.py
flask_rest_api/: __init__.py  app.py  models.py  videos.db
tests/: test_app.py
